--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-
+<!DOCTYPE <!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/styling.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="main.js"></script>
+</head>
+<body>
+    <!--Begin Nav Bar-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Josh Arias</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="index.html">About Me<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link" href="contact.html">Contact Me</a>
+              </div>
+            </div>
+          </nav>
+<!--End Nav Bar-->
+<!--Begin Page Content-->
+    <div class="bodystyle"> 
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>About Me</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <img src="C:/Users/Josh/Desktop/Coding_bootcamp/Bootstrap-Portfolio/images/me2.JPG" class="img-left img-thumbnail rounded float-left" alt="Responsive image">
+                    <p>This is a short paragraph about me. I will replace it in the near future. Again, my name is Josh Arias and I love to surf and am really looking forward to getting better at this whole coding thing. <br><br> I hope to someday have a group of clients that I can work remotely with and just run their website and marketing but work from a beach somewhere. Maybe Nicaragua, that place was awesome. Or even somewhere in Indo, needs good wifi tho. <br><br>This is a short paragraph about me. I will replace it in the near future. Again, my name is Josh Arias and I love to surf and am really looking forward to getting better at this whole coding thing. <br><br> I hope to someday have a group of clients that I can work remotely with and just run their website and marketing but work from a beach somewhere. Maybe Nicaragua, that place was awesome. Or even somewhere in Indo, needs good wifi tho.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+<!--End Page Content-->
+</body>
+</html>
