--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,73 @@
+<!DOCTYPE <!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/styling.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="main.js"></script>
+</head>
+<body>
+    <!--Begin Nav Bar-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Josh Arias</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link" href="index.html">About Me<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href="portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link" href="contact.html">Contact Me</a>
+              </div>
+            </div>
+          </nav>
+<!--End Nav Bar-->
+<!--Begin Page Content-->
+    <div class="bodystyle"> 
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>About Me</h1>
+                </div>
+            </div>
+            <div class="row">
+                    <div class="card col-md-6 imagemargin">
+                            <img class="card-img-top" src="images/me4.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                    </div>
+                    <div class="card col-md-6 imagemargin">
+                            <img class="card-img-top" src="images/me4.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                    </div>
+                    <div class="card col-md-6 imagemargin">
+                            <img class="card-img-top" src="images/me4.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                    </div>
+                    <div class="card col-md-6 imagemargin">
+                            <img class="card-img-top" src="images/me4.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                    </div>
+                    <div class="card col-md-6 imagemargin">
+                            <img class="card-img-top" src="images/me4.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                    </div>
+            </div>
+        </div>
+    </div>
+<!--End Page Content-->
+</body>
+</html>
 
