--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <img src="C:/Users/Josh/Desktop/Coding_bootcamp/Bootstrap-Portfolio/images/me2.JPG" class="img-left img-thumbnail rounded float-left" alt="Responsive image">
+                    <img src="images/me2.JPG" class="img-left img-thumbnail rounded float-left" alt="Responsive image">
                     <p>This is a short paragraph about me. I will replace it in the near future. Again, my name is Josh Arias and I love to surf and am really looking forward to getting better at this whole coding thing. <br><br> I hope to someday have a group of clients that I can work remotely with and just run their website and marketing but work from a beach somewhere. Maybe Nicaragua, that place was awesome. Or even somewhere in Indo, needs good wifi tho. <br><br>This is a short paragraph about me. I will replace it in the near future. Again, my name is Josh Arias and I love to surf and am really looking forward to getting better at this whole coding thing. <br><br> I hope to someday have a group of clients that I can work remotely with and just run their website and marketing but work from a beach somewhere. Maybe Nicaragua, that place was awesome. Or even somewhere in Indo, needs good wifi tho.</p>
                 </div>
             </div>
